--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   db:
     image: postgres:14.1-alpine
-    container_name: postegres
+    container_name: postgres
     restart: always
     tty: true
     environment:
